--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -6,7 +6,7 @@
     formats:
       default: "%d/%m/%Y"
       short: "%d de %B"
-      long: "%d de %B de %Y"
+      long: "%d de %B de %Y"      
 
     day_names:
       - Domingo
@@ -63,6 +63,7 @@
       default: "%A, %d de %B de %Y, %H:%M h"
       short: "%d/%m, %H:%M h"
       long: "%A, %d de %B de %Y, %H:%M h"
+      only_month: "%b %y"
     am: ''
     pm: ''
 
